<resources>
    <string name="app_name">Avalon</string>

    <!-- Game Title -->
    <string name="create_room">Create</string>
    <string name="cancel_room">Cancel</string>
    <string name="enter_room">Enter room</string>
    <string name="hint_player_name">Player name (8 characters at most)</string>
    <string name="title_rule">Rule</string>
    <string name="rule_explanation">BlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlah
        BlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlah
    BlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlah
    </string>
    <string name="enter_room_number">Enter room number</string>
    <string name="new_room_number">New room</string>
    <string name="room_number">Room number: %1$d</string>
    <string name="waiting_player">Waiting for players</string>
    <string name="play_number">%1$d / 5</string>

    <!-- Nearby connection -->
    <string name="endpoint_found">Find player: %1$s</string>
    <string name="ask_if_start_connecting">Start </string>


    <!-- Game Phases -->
    <string-array name="game_phases">
        <item>Team Building</item>
        <item>Vote Team</item>
        <item>Mission</item>
    </string-array>

    <string-array name="avalon_identities">
        <item>Unknown</item>
        <!-- Good -->
        <item>Merlin</item>
        <item>Percival</item>
        <item>Good</item>
        <!-- Evil -->
        <item>Mordred</item>
        <item>Morgana</item>
        <item>Assassin</item>
        <item>Oberon</item>
        <item>Evil</item>
    </string-array>

    <!-- Avalon Characters name -->
    <string-array name="avalon_characters">
        <!-- Good -->
        <item>Merlin</item>
        <item>Percival</item>
        <item>Loyal Servant of Arthur</item>
        <!-- Evil -->
        <item>Mordred</item>
        <item>Morgana</item>
        <item>Assassin</item>
        <item>Oberon</item>
        <item>Minion of Mordred</item>
    </string-array>
    <!-- Good side -->
    <string name="avalon_Merlin">Merlin</string>
    <string name="avalon_Merlin_self_intro">Knows evil, must remain hidden</string>

    <string name="avalon_Percival">Percival</string>
    <string name="avalon_Percival_self_intro">Knows Merlin</string>

    <string name="avalon_Loyal_servant_of_Arthur">Loyal Servant of Arthur</string>

    <!-- Evil side -->
    <string name="avalon_Mordred">Mordred</string>
    <string name="avalon_Mordred_self_intro">Unknown to Merlin</string>

    <string name="avalon_Morgana">Morgana</string>
    <string name="avalon_Morgana_self_intro">Appear as Merlin</string>

    <string name="avalon_Assassin">Assassin</string>

    <string name="avalon_Oberon">Oberon</string>
    <string name="avalon_Oberon_self_intro">Unknown to Evil</string>

    <string name="avalon_Minion_of_Mordred">Minion of Mordred</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="mission1">Mission 1</string>
    <string name="mission2">Mission 2</string>
    <string name="mission3">Mission 3</string>
    <string name="mission4">Mission 4</string>
    <string name="mission5">Mission 5</string>


    <!--  Mission Record  -->
    <string name="mission_title">任務 %1$d</string>
    <string name="round_name">回合 %1$d</string>
</resources>
