<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".title.WaitPlayerEnter">

    <TextView
            android:id="@+id/textRoomNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/room_number"
            android:textSize="@dimen/room_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

    <com.example.avaloncharacters.title.LoadingTextView
            android:id="@+id/loadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:text="@string/waiting_player"

            android:textSize="@dimen/room_number"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guideline" />

    <TextView
            android:id="@+id/textPlayNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_number"
            android:textSize="@dimen/room_number"
            app:layout_constraintBottom_toBottomOf="@id/loadingTextView"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toRightOf="@id/loadingTextView"
            app:layout_constraintRight_toRightOf="parent" />

    <Button
            android:id="@+id/btnCancelRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/cancel_room"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>