<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.avaloncharacters.characters.CharacterView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/player2"
            />

    <com.example.avaloncharacters.characters.CharacterView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/player1"
            app:layout_constraintRight_toLeftOf="@id/player3"
            />

    <com.example.avaloncharacters.characters.CharacterView
            android:id="@+id/player3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/player2"
            app:layout_constraintRight_toLeftOf="@id/player4"
            />

    <com.example.avaloncharacters.characters.CharacterView
            android:id="@+id/player4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/player3"
            app:layout_constraintRight_toRightOf="parent"
            />

    <!--#####################################################################-->

    <FrameLayout
            android:id="@+id/group_mission1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/player1"
            app:layout_constraintBottom_toTopOf="@id/mainPlayer_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/group_mission2"
            >

        <ImageButton
                android:id="@+id/btn_mission1"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:background="@android:color/transparent"
                android:src="@drawable/character_circle"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission1"
                android:layout_gravity="center"
                android:clickable="false"
                android:textSize="@dimen/btn_title"
                />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/group_mission2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/player1"
            app:layout_constraintBottom_toTopOf="@id/mainPlayer_img"
            app:layout_constraintLeft_toRightOf="@id/group_mission1"
            app:layout_constraintRight_toLeftOf="@id/group_mission3"
            >

        <ImageButton
                android:id="@+id/btn_mission2"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:background="@android:color/transparent"
                android:src="@drawable/character_circle"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission2"
                android:layout_gravity="center"
                android:clickable="false"
                android:textSize="@dimen/btn_title"
                />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/group_mission3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/player1"
            app:layout_constraintBottom_toTopOf="@id/mainPlayer_img"
            app:layout_constraintLeft_toRightOf="@id/group_mission2"
            app:layout_constraintRight_toLeftOf="@id/group_mission4"
            >

        <ImageButton
                android:id="@+id/btn_mission3"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:background="@android:color/transparent"
                android:src="@drawable/character_circle"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission3"
                android:layout_gravity="center"
                android:clickable="false"
                android:textSize="@dimen/btn_title"
                />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/group_mission4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/player1"
            app:layout_constraintBottom_toTopOf="@id/mainPlayer_img"
            app:layout_constraintLeft_toRightOf="@id/group_mission3"
            app:layout_constraintRight_toLeftOf="@id/group_mission5"
            >

        <ImageButton
                android:id="@+id/btn_mission4"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:background="@android:color/transparent"
                android:src="@drawable/character_circle"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission4"
                android:layout_gravity="center"
                android:clickable="false"
                android:textSize="@dimen/btn_title"
                />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/group_mission5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/player1"
            app:layout_constraintBottom_toTopOf="@id/mainPlayer_img"
            app:layout_constraintLeft_toRightOf="@id/group_mission4"
            app:layout_constraintRight_toRightOf="parent"
            >

        <ImageButton
                android:id="@+id/btn_mission5"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:background="@android:color/transparent"
                android:src="@drawable/character_circle"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission5"
                android:layout_gravity="center"
                android:clickable="false"
                android:textSize="@dimen/btn_title"
                />

    </FrameLayout>

    <!--#####################################################################-->


    <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:id="@+id/mainPlayer_img"
            android:src="@drawable/merlin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mainPlayer"
            />

    <com.example.avaloncharacters.characters.CharacterView
            android:id="@+id/mainPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/mainPlayer_img"
            app:layout_constraintRight_toLeftOf="@id/player2"
            />

    <com.example.avaloncharacters.helpers.ChoiceCountDownView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/mainPlayer"
            />

</androidx.constraintlayout.widget.ConstraintLayout>